[package]
name = "launchdarkly-autoconfig"
version = "0.1.0"
edition = "2021"

[lib]
name = "launchdarkly_autoconfig"
path = "src/lib.rs"

[[bin]]
name = "ldactl"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.7.8", features = [
    "codec",
    "futures-io",
    "futures-util",
    "io",
    "io-util",
    "tracing",
] }
anyhow = "1.0.72"
eventsource-client = "0.11.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = [
    "bytes",
    "io-util",
    "macros",
    "tracing",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1.14", features = [
    "io-util",
    "net",
    "tokio-util",
] }
tracing = "0.1.37"
futures = "0.3.28"
log = "0.4.19"
pin-project = "1.1.2"
miette = { version = "5.10.0", features = ["fancy", "serde"] }
hyper = "0.14.27"
